# Bishop-Pattern-Recognition-and-Machine-Learning-2006

./: .gitignore  README.md  main.py  pyproject.toml  run_all_chapters.py
configs/: config.yaml
configs/chapter/: chapter01.yaml  chapter02.yaml  chapter03.yaml  chapter04.yaml  chapter05.yaml  chapter06.yaml  chapter07.yaml  chapter08.yaml  chapter09.yaml  chapter10.yaml  chapter11.yaml  chapter12.yaml  chapter13.yaml  chapter14.yaml
prml/: __init__.py
prml/chapter01/: __init__.py  curse_of_dimensionality.py  decision_theory.py  information_theory.py  model_selection.py  polynomial_fitting.py  probability_theory.py
prml/chapter02/: __init__.py  binary_variables.py  exponential_family.py  gaussian_distribution.py  multinomial_variables.py  nonparametric_methods.py
prml/chapter03/: __init__.py  bayesian_linear_regression.py  bias_variance.py  linear_basis_models.py
prml/chapter04/: __init__.py  discriminant_functions.py  probabilistic_discriminative.py  probabilistic_generative.py
prml/chapter05/: __init__.py  backpropagation.py  feedforward_network.py
prml/chapter06/: __init__.py  gaussian_processes.py  kernel_functions.py
prml/chapter07/: __init__.py  relevance_vector_machines.py  support_vector_machines.py
prml/chapter08/: __init__.py  bayesian_networks.py  inference.py  markov_random_fields.py
prml/chapter09/: __init__.py  gaussian_mixture.py  k_means.py
prml/chapter10/: __init__.py  expectation_propagation.py  variational_inference.py
prml/chapter11/: __init__.py  basic_sampling.py  mcmc.py
prml/chapter12/: __init__.py  ica.py  pca.py
(+8 files in other folders)
